// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with empty expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No Expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={10000}
      createdAt={-345600000}
      description="Credit Card Bill"
      id="1"
      key="1"
      note="hdfc card bill"
    />
    <ExpenseListItem
      amount={300}
      createdAt={0}
      description="Lunch"
      id="2"
      key="2"
      note="@ bawarchi"
    />
    <ExpenseListItem
      amount={7000}
      createdAt={345600000}
      description="Rent"
      id="3"
      key="3"
      note="this month rent"
    />
  </div>
</div>
`;
